fix: reectify where the hero and about sections were overlapping in medium screens

--- a/src/output.css
+++ b/src/output.css
@@ -1040,6 +1040,38 @@ video {
     order: 4;
   }
 
+  .md\:mx-40{
+    margin-left: 10rem;
+    margin-right: 10rem;
+  }
+
+  .md\:mx-3{
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+  }
+
+  .md\:mx-36{
+    margin-left: 9rem;
+    margin-right: 9rem;
+  }
+
+  .md\:mx-32{
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
+
+  .md\:mr-32{
+    margin-right: 8rem;
+  }
+
+  .md\:ml-32{
+    margin-left: 8rem;
+  }
+
+  .md\:mt-36{
+    margin-top: 9rem;
+  }
+
   .md\:hidden{
     display: none;
   }
@@ -1153,6 +1185,54 @@ video {
 
   .md\:pt-40{
     padding-top: 10rem;
+  }
+
+  .md\:pl-36{
+    padding-left: 9rem;
+  }
+
+  .md\:pl-20{
+    padding-left: 5rem;
+  }
+
+  .md\:pt-36{
+    padding-top: 9rem;
+  }
+
+  .md\:pl-24{
+    padding-left: 6rem;
+  }
+
+  .md\:pb-72{
+    padding-bottom: 18rem;
+  }
+
+  .md\:pl-2{
+    padding-left: 0.5rem;
+  }
+
+  .md\:pt-24{
+    padding-top: 6rem;
+  }
+
+  .md\:pb-24{
+    padding-bottom: 6rem;
+  }
+
+  .md\:pb-9{
+    padding-bottom: 2.25rem;
+  }
+
+  .md\:pb-96{
+    padding-bottom: 24rem;
+  }
+
+  .md\:pt-96{
+    padding-top: 24rem;
+  }
+
+  .md\:pt-12{
+    padding-top: 3rem;
   }
 
   .md\:text-right{
@@ -1501,6 +1581,18 @@ video {
 
   .lg\:pt-36{
     padding-top: 9rem;
+  }
+
+  .lg\:pt-24{
+    padding-top: 6rem;
+  }
+
+  .lg\:pb-24{
+    padding-bottom: 6rem;
+  }
+
+  .lg\:pb-0{
+    padding-bottom: 0px;
   }
 
   .lg\:text-left{
